# AscendBackend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
app/: main.py
app/api/: __init__.py  routes.py
app/core/: config.py  logging.py
app/schemas/: detection.py
app/services/: color_detection_service.py  color_service.py  colour_detection_service.py  yolo_service.py
